<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".FragmentDe">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="600dp"
        tools:ignore="ScrollViewSize">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/textview_border"
            android:backgroundTint="?colorSurfaceVariant"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toTopOf="@+id/button10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button11"
            tools:ignore="ContentDescription" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autoSizeMaxTextSize="16sp"
            android:autoSizeTextType="uniform"
            android:text="@string/share"
            app:cornerRadius="20dp"
            app:icon="@drawable/baseline_share_24"
            app:iconGravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autoSizeMaxTextSize="16sp"
            android:autoSizeTextType="uniform"
            android:text="@string/confirmDe"
            app:cornerRadius="20dp"
            app:icon="@drawable/baseline_done_24"
            app:iconGravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="16dp"
            android:autoSizeTextType="none"
            android:background="@drawable/textview_border"
            android:backgroundTint="?colorSurfaceVariant"
            android:gravity="center"
            android:hint="@string/path"
            android:scrollbars="vertical"
            android:textIsSelectable="true"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/button11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>